tests/files/flow_controller_tests/should_run/107.cmdr
x = 0;
print arctanh(x);