tests/files/flow_controller_tests/should_fail/103.cmdr
x = true;
print arctanh(x);